fix menu collapse text

--- a/packages/web/src/app/layout/UserLayout.css
+++ b/packages/web/src/app/layout/UserLayout.css
@@ -65,7 +65,7 @@
   }
 }
 
-.ant-menu-inline-collapsed > .ant-menu-item .anticon + a {
+.ant-menu-inline-collapsed > .ant-menu-item .anticon + .link-text {
   display: inline-block;
   max-width: 0;
   opacity: 0;
